--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A graphic design business portfolio website",
   "main": "server/index.js",
   "scripts": {
+    "react-dev": "webpack -d --watch",
+    "start": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,17 +20,19 @@
   "homepage": "https://github.com/anthonypecchillo/Seek-A-Design#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery": "^3.3.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.1.2",
+    "nodemon": "^1.18.9",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.1.2"
   }
