--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   },
   "homepage": "https://github.com/anthonypecchillo/Seek-A-Design#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -30,9 +35,12 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "css-loader": "^2.1.0",
     "express": "^4.16.3",
+    "file-loader": "^3.0.1",
     "mongoose": "^5.1.2",
     "nodemon": "^1.18.9",
+    "style-loader": "^0.23.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.1.2"
   }
