--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "description": "A graphic design business portfolio website",
   "main": "server/index.js",
+  "proxy": "http://localhost:5000",
+  "engines": {
+    "npm": "5.6.0",
+    "node": "8.11.1"
+  },
   "scripts": {
+    "heroku-postbuild": "cd Seek-A-Design && npm install --only=dev && npm install && npm run build",
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
+    "start-dev": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,24 +31,24 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "mongoose": "^5.1.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "webpack": "^4.5.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.18.3",
     "css-loader": "^2.1.0",
-    "express": "^4.16.3",
     "file-loader": "^3.0.1",
-    "mongoose": "^5.1.2",
     "nodemon": "^1.18.9",
     "style-loader": "^0.23.1",
-    "webpack": "^4.5.0",
     "webpack-cli": "^3.1.2"
   }
 }
