--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": "8.11.1"
   },
   "scripts": {
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "webpack -p",
     "react-dev": "webpack -d --watch",
     "start": "node server/index.js",
     "start-dev": "nodemon server/index.js",
